# pointcloudToMesh

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.release  Dockerfile.release.ubuntu  README.md
.github/workflows/: cd.yml  ci.yml  lint_and_test.yml
include/: surface.hpp  visualizer.hpp
src/: CMakeLists.txt  main.cpp
